syntax = "proto3";

option csharp_namespace = "Makc.Dummy.MicroserviceWriter.Infrastructure.Grpc.Auth";

package Writer;

service Auth {
    rpc Login (AuthLoginGrpcRequest) returns (AuthLoginGrpcReply);
}

message AuthLoginGrpcRequest {
    string user_name = 1;
    string password = 2;
}

message AuthLoginGrpcReply {
    string user_name = 1;
    string access_token = 2;
}
